# BetterCT

./: .gitignore  README.md
betterct/app/: .gitignore  README.md  pubspec.yaml
betterct/app/.dart_tool/: package_graph.json
betterct/backend/: .env.tamplate  pyproject.toml
betterct/backend/app/: main.py
betterct/backend/app/api/: tasks.py
betterct/backend/app/core/: auth.py  clerk.py  config.py  database.py
betterct/backend/app/models/: task.py
betterct/backend/app/schemas/: task.py
betterct/web/: .env.tamplate  .gitignore  package-lock.json  package.json
betterct/web/src/: App.tsx  main.tsx
betterct/web/src/component/: AppAppBar.tsx  FAQ.tsx  Features.tsx  Footer.tsx  Hero.tsx  Highlights.tsx  Pricing.tsx  Testimonials.tsx
betterct/web/src/modules/: ProjectManagementMod.tsx
betterct/web/src/pages/: DashboardPage.tsx  HomePage.tsx  IndexPage.tsx  PricingPage.tsx  SignInPage.tsx  SignUpPage.tsx  TestPage.tsx
betterct/web/src/shared-theme/: AppTheme.tsx  ColorModeIconDropdown.tsx
betterct/web/src/styles/: App.css
tools/pipeline/: .gitignore  Cargo.toml  README.md  build.bat  build.sh
tools/pipeline/src/: lib.rs  main.rs
tools/pipeline/src/cli/: mod.rs
tools/pipeline/src/format/: audio.rs  mod.rs  model3d.rs  texture.rs
tools/pipeline/src/graph/: dependency.rs  mod.rs  versioning.rs
tools/pipeline/src/storage/: content_store.rs  diff_engine.rs  mod.rs
