[package]
name = "pipeline"
version = "0.1.0"
edition = "2024"

[dependencies]
blake3 = "1.8.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.133"
bincode = "2.0.1"
tokio = { version = "1.49.0", features = ["full"] }
rayon = "1.11.0"
image = "0.25.9"
gltf = "1.2.0"
petgraph = "0.8.3"
tracing = "0.1.44"
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.56", features = ["derive"] }
tracing-subscriber = "0.3.22"

[dev-dependencies]
tempfile = "3.24.0"